// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a legend component 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
>
  <ul
    class="legend-layer-list chakra-list__root css-96r4vb"
    role="list"
  />
</div>
`;

exports[`should successfully show legend for Component configuration 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
>
  <ul
    class="legend-layer-list chakra-list__root css-96r4vb"
    role="list"
  >
    <li
      class="legend-item layer-layer-1 css-0"
    >
      <div
        class="css-0"
      >
        <p
          class="css-0"
        >
          Layer 1
        </p>
        <div
          class="css-0"
          style="height: 25px; width: 25px; border-color: #4cb3ff; border-width: 3px; border-radius: 50%; display: inline-block;"
        />
      </div>
    </li>
  </ul>
</div>
`;

exports[`should successfully show legend for imageUrl configuration 1`] = `
<div
  class="legend css-0"
  data-testid="legend"
>
  <ul
    class="legend-layer-list chakra-list__root css-96r4vb"
    role="list"
  >
    <li
      class="legend-item layer-layer-1 css-0"
    >
      <div
        class="css-0"
      >
        <p
          class="css-0"
        >
          Layer 1
        </p>
        <img
          alt="altLabel"
          class="legend-item__image css-vn2kbv"
          src="https://avatars.githubusercontent.com/u/121286957?s=200&v=4"
        />
      </div>
    </li>
  </ul>
</div>
`;
